--- a/ClassManagementSystemUI/src/app/classlist/classlist.component.html
+++ b/ClassManagementSystemUI/src/app/classlist/classlist.component.html
@@ -1,3 +1,10 @@
-<p>
+<!-- <p>
   classlist works!
-</p>
+</p> -->
+
+<div>
+  <input type="number" [(ngModel)]="a" /> +
+  <input type="number" [(ngModel)]="b" /> =
+  <input type="number" [(ngModel)]="c" />
+  <button (click)="calculate()">Calculate</button>
+</div>
